--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ h1{
 	color: black;
 }
 .fondo{
-	border: 5px solid rgba(59, 59, 236, 0.842);
+	border: 5px solid rgb(59, 59, 236);
 	background: rgba(116, 238, 59, 0.692);
 	width: auto;
 	height: 85vh;
@@ -21,18 +21,57 @@ h1{
 	left: 3%;
 	top: 5%;
 	background: rgb(255, 0, 0);
-	width: 50%;
+	width: 60%;
 	height: 5vh;
+}
+.ltop{
+	animation: menu 1.5s 1;
+	backface-visibility: visible;
+}
+@keyframes menu{
+	0%{
+        opacity: 0.5;
+        transform: perspective(200px)
+               rotateX(90deg);
+    }
+    40%{
+        transform: perspective(200px)
+               rotateX(-20deg);
+    }
+    70%{
+        transform: perspective(200px)
+               rotateX(20deg);
+    }
 }
 .rtop{
 	color: black;
 	position: absolute;
 	content: '';
-	left: 55%;
+	left: 65%;
 	top: 5%;
-	background: rgba(14, 9, 41, 0.767);
-	width: 41%;
+	background: rgb(0, 255, 255);
+	width: 31%;
 	height: 5vh;
+}
+.rtop:hover{
+	animation: color 4s infinite;
+}
+@keyframes color{
+	20%{
+		background: rgb(255, 0, 255);
+	}
+	40%{
+		background: rgb(255, 255, 0);
+	}
+	60%{
+		background: rgb(0, 255, 21);
+	}
+	100%{
+		background: rgb(55, 0, 255);
+	}
+	80%{
+		background: rgb(255, 115, 0);
+	}
 }
 .nav{
 	margin-top: 5px;
@@ -41,8 +80,8 @@ h1{
 	position: absolute;
 	content: '';
 	background: skyblue;
-	left: 3%;
-	top: 11vh;
+	left: 0%;
+	top: 9vh;
 	width: 93%;
 	height: 10vh;
 }
@@ -56,6 +95,11 @@ h1{
 	top: 22VH;
 	width: 46%;
 	height: 51vh;
+	box-shadow: 0px 0px 1px rgba(0,0,0,1);
+}
+.lbody:hover{
+	transition-duration: 0.3s;
+    box-shadow: 0px 0px 8px rgba(0,0,0,1);
 }
 .rbody{
 	color: black;
@@ -69,6 +113,23 @@ h1{
 	height: 51vh;
 	max-width: 1000px;
 }
+.rbody:hover{
+	animation: 1s banda 1;
+}
+@keyframes banda{
+	30%{
+		transform: 
+		scaleX(1.25) scaleY(0.55);
+	}
+	50%{
+		transform: 
+		scaleX(0.75) scaleY(1.05);
+	}
+	60%{
+		transform: 
+		scaleX(1.15) scaleY(0.65);
+	}
+}
 .footer{
 	color: #000;
 	position: absolute;
@@ -79,6 +140,10 @@ h1{
 	top: 74vh;
 	width: 93%;
 	height: 10vh;
+	transition-duration: 0.3s;
+}
+.footer:hover{
+	border-radius: 20px;
 }
 .widget {
 	width: 40%;
@@ -99,7 +164,7 @@ h1{
 	width: 120%;
 	padding: 10px;
 	font-size: 5vh;
-	background: rgba(0,0,0,.5);
+	background: rgba(0, 0, 0, 0.5);
 }
 .hora .SB {
 	display: inline-block;
@@ -108,4 +173,32 @@ h1{
 .hora .DN {
 	font-size: 3vh;
 	display: block;
+}
+.sombra_radial{
+    position: relative;
+    box-shadow: 0px 0px 1px black;
+}
+.sombra_radial:before,
+.sombra_radial:after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    left: 0px;
+    opacity: 0;
+    transition-duration: 0.3s;
+}
+.sombra_radial:before{
+    bottom: 100%;
+    background: radial-gradient(ellipse at 50% 150%, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0) 80%);
+
+}
+.sombra_radial:after{
+    top: 100%;
+    background: radial-gradient(ellipse at 50% -50%, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0) 80%);
+
+}
+.sombra_radial:hover:before,
+.sombra_radial:hover:after{
+    opacity: 1;
 }
